--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,8 +39,8 @@
     "lucide-react": "^0.303.0",
     "next": "^14.1.0",
     "postcss": "^8.4.32",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.49.0",
     "recharts": "^2.10.0",
     "socket.io-client": "^4.6.1",
