--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,9 +19,11 @@
     "@tanstack/react-query": "^5.17.0",
     "expo": "~50.0.0",
     "expo-constants": "~15.4.0",
+    "expo-device": "^8.0.10",
     "expo-font": "~11.10.0",
     "expo-image": "~1.10.0",
     "expo-linking": "~6.2.0",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~3.4.0",
     "expo-secure-store": "~12.8.0",
     "expo-splash-screen": "~0.26.0",
